syntax = "proto3";

package dto;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/elojah/game_02/pkg/space/dto/tile.proto";
import "github.com/elojah/game_02/pkg/account/dto/account.proto";
import "github.com/elojah/game_02/pkg/geometry/geometry.proto";

message ConnectRoom {
	dto.Auth Auth                            = 1 [(gogoproto.nullable) = false];

    bytes ID                                 = 2 [(gogoproto.customtype) = "github.com/elojah/game_02/pkg/ulid.ID", (gogoproto.nullable) = false];
    string Password                          = 3;
}

message CreateRoom {
	dto.Auth Auth                            = 1 [(gogoproto.nullable) = false];

    string Name                              = 2;
    string Password                          = 3;

    dto.CreateMap Map                        = 4 [(gogoproto.nullable) = false];
	geometry.Vec3 SectorDimensions           = 5 [(gogoproto.nullable) = false];
}
